fixed border-radius color gap

--- a/projects/storefront/src/app/contact/contact-page/contact-page.component.scss
+++ b/projects/storefront/src/app/contact/contact-page/contact-page.component.scss
@@ -25,15 +25,15 @@
 
 .form-group {
   position: relative;
-  margin-bottom: 2rem; 
+  margin-bottom: 1.5rem; 
 }
 
 .custom-input, .custom-textarea {
-  width: 80%;
+  width: 81%;
   font-family: 'Heebo', sans-serif;
-  padding: 1.2rem 1.5rem; 
-  border: 1px solid #d1d5db;
-  border-radius: 1rem;
+  padding: 1rem 1rem; 
+  border: 1px solid #e5e5e5;
+  border-radius: 0.75rem;
   font-size: 1rem;
   transition: all 0.2s;
   
@@ -84,7 +84,7 @@
   }
 }
 .form-actions {
-  margin-top: 2.5rem;
+  margin-top: 1.5rem;
 }
 
 .alert {
